show page working now starting on small index

--- a/index.html
+++ b/index.html
@@ -10,10 +10,12 @@
 
     </header>
     <div id="mood-index" class="show">
-
     </div>
 
     <div id="movie-index" class="show">
+    </div>
+
+    <div id="movie-show" class="show">
 
     </div>
   </body>
@@ -21,3 +23,11 @@
 
   <script src="src/index.js" charset="utf-8"></script>
 </html>
+
+
+<!-- <div class="movie_show">
+  <img src="${movie.image}" alt="">
+  <h4>${movie.title}</h4>
+  <p>${movie.description}</p>
+  <p>${movie.length} minutes</p>
+</div> -->
