more formatting with yucky colours

--- a/index.html
+++ b/index.html
@@ -2,12 +2,17 @@
 <html lang="en" dir="ltr">
   <head>
     <link rel="stylesheet" href="src/style.css">
+
+
+    <link href="https://fonts.googleapis.com/css?family=Audiowide|Fahkwang|Limelight|Love+Ya+Like+A+Sister|Monoton|Nova+Flat|Roboto|Special+Elite|Staatliches" rel="stylesheet">
+
+
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <header>
-
+      <h4 id="header-title">Movie Moods</h4>
     </header>
     <div id="mood-index" class="show">
     </div>
