added dynamic index views

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <div id="mood-index" class="show">
     </div>
 
-    <div id="movie-index" class="show">
+    <div id="movie-index">
+    </div>
+
+    <div id="movie-scroll-index" class="show">
     </div>
 
     <div id="movie-show" class="show">
@@ -28,11 +31,3 @@
 
   <script src="src/index.js" charset="utf-8"></script>
 </html>
-
-
-<!-- <div class="movie_show">
-  <img src="${movie.image}" alt="">
-  <h4>${movie.title}</h4>
-  <p>${movie.description}</p>
-  <p>${movie.length} minutes</p>
-</div> -->
