good progress on ux

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="stylesheet" href="src/style.css">
 
-
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Fahkwang|Limelight|Love+Ya+Like+A+Sister|Monoton|Nova+Flat|Roboto|Special+Elite|Staatliches" rel="stylesheet">
 
 
