added background movie

--- a/index.html
+++ b/index.html
@@ -14,8 +14,15 @@
     <header>
       <h4 id="header-title">Movie Moods</h4>
     </header>
+    <div id="movieBackground">
+      <video id="movieBackgroundVideo" loop="true" src="assets/trim2.mp4" autoplay poster="posterimage.jpg">
+
+      </video>
+    </div>
+
     <div id="mood-index" class="show">
     </div>
+
 
     <div id="movie-index">
     </div>
