got index pages to only show unique movies

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h4 id="header-title">Movie Moods</h4>
     </header>
     <div id="movieBackground">
-      <video id="movieBackgroundVideo" loop="true" src="file:///Users/olivernelson/Desktop/trim2.mp4" autoplay poster="posterimage.jpg">
+      <video id="movieBackgroundVideo" muted="true" loop="true" src="file:///Users/olivernelson/Desktop/trim2.mp4" autoplay poster="posterimage.jpg">
 
       </video>
     </div>
