--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     </header>
     <div id="movieBackground">
       <video id="movieBackgroundVideo" muted="true" loop="true" src="file:///Users/olivernelson/Desktop/trim2.mp4" autoplay poster="posterimage.jpg">
-
       </video>
+      <div id="video-overlay">
+        <i id="mute-button-icon" class="fas fa-volume-mute"></i>
+      </div>
     </div>
 
     <div id="mood-index" class="show">
