--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.1/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Fahkwang|Limelight|Love+Ya+Like+A+Sister|Monoton|Nova+Flat|Roboto|Special+Elite|Staatliches" rel="stylesheet">
-
+    <link rel="stylesheet" href="src/hover.css">
 <!--  -->
     <meta charset="utf-8">
     <title></title>
   </head>
   <body>
     <header>
-      <h4 id="header-title">Movie Moods</h4>
+      <h4 class="hvr-grow" id="header-title">Movie Moods</h4>
     </header>
     <div id="movieBackground">
       <video id="movieBackgroundVideo" muted="true" loop="true" src="file:///Users/olivernelson/Desktop/trim2.mp4" autoplay poster="posterimage.jpg">
