made changes to make it compadible with new backend

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <h4 class="hvr-grow" id="header-title">Movie Moods</h4>
     </header>
     <div id="movieBackground">
-      <video id="movieBackgroundVideo" muted="true" loop="true" src="file:///Users/olivernelson/Desktop/trim2.mp4" autoplay poster="posterimage.jpg">
+      <video id="movieBackgroundVideo" muted="true" loop="true" src="https://storage.googleapis.com/bucket-of-doom/trailer-trash-video.mp4" autoplay poster="posterimage.jpg">
       </video>
       <div id="video-overlay">
         <i id="mute-button-icon" class="fas fa-volume-mute"></i>
